fixed "more stuff to buy" link that was getting covered at some resolutions

--- a/web/app/themes/monk-theme/src/styl/main.styl
+++ b/web/app/themes/monk-theme/src/styl/main.styl
@@ -1,11 +1,8 @@
 /*!!
 Theme Name:     Monk-theme
-Theme URI:
-Description:    Twentytwentythree child theme.
+Description:    Monk Magazine Custom theme.
 Author:         Adam Haley
-Author URI:
-Template:       monk-theme
-Version:        0.1.3
+Version:        0.1.6
 */
 body
 	display grid
@@ -348,6 +345,7 @@ a.more-link
 					transform scale(1.1)
 .more-stuff-to-buy
 	display block
+	z-index 500
 	grid-column-start 7
 	grid-column-end 10
 	text-decoration none
@@ -355,13 +353,13 @@ a.more-link
 	height 1em
 	width 100%
 	margin-top -4.5em
-	.xs &, .sm &
+	.xs &, .sm &, .md &
 		margin-top 0
 	img
 		display inline-block
 		.xs &
 			height 1em
-			margin-top -1em
+			margin-top 1em
 		.md &
 			margin-top 2em
 
