--- a/web/app/themes/monk-theme/style.css
+++ b/web/app/themes/monk-theme/style.css
@@ -135,12 +135,9 @@ img {
   \****************************************************************************************************************************************************************************/
 /*!
 Theme Name:     Monk-theme
-Theme URI:
-Description:    Twentytwentythree child theme.
+Description:    Monk Magazine Custom theme.
 Author:         Adam Haley
-Author URI:
-Template:       monk-theme
-Version:        0.1.4
+Version:        0.1.6
 */
 body {
   display: grid;
@@ -553,6 +550,7 @@ a.more-link i:hover {
 }
 .more-stuff-to-buy {
   display: block;
+  z-index: 500;
   grid-column-start: 7;
   grid-column-end: 10;
   text-decoration: none;
@@ -562,7 +560,8 @@ a.more-link i:hover {
   margin-top: -4.5em;
 }
 .xs .more-stuff-to-buy,
-.sm .more-stuff-to-buy {
+.sm .more-stuff-to-buy,
+.md .more-stuff-to-buy {
   margin-top: 0;
 }
 .more-stuff-to-buy img {
@@ -570,7 +569,7 @@ a.more-link i:hover {
 }
 .xs .more-stuff-to-buy img {
   height: 1em;
-  margin-top: -1em;
+  margin-top: 1em;
 }
 .md .more-stuff-to-buy img {
   margin-top: 2em;
